	7621 Token_of_Ziegfried		Revive player on death (if item is in inventoy? Needs a clearer description)
	Still need proper rates for most 11.3 Equipment that don't have their +rates/Status Infliction rates clearly defined.
	13107 Western_Outlaw		Need correct HIT and ASPD Rate
	----
========================

07/24
	* Added Job_Alchemist constant, Job_Alchem should now be considered deprecated [DracoRPG]
07/15
	* Rev. 10885 Fixed incorrect skill ID for Lady Tany's Expulsion. [L0ne_W0lf]
	* Corrected the AegisName for "Fresh Fish." Should have been "Delicious_Fish"
	* Rev. 10884 Fixed incorrect skill ID for Thanatos's Expulsion. [L0ne_W0lf]
	* Rev. 10883 Fixed Blue Drooping Kitty again (extra comma.) [L0ne_W0lf]
07/13
	* Rev. 10879 Updated "Name" fields for 11.2 headgears. [L0ne_W0lf]
	* Rev. 10877 Fixed Blue Drooping Kitty. (Missing comma) Thanks to diedlikeahero [L0ne_W0lf]
07/10
	* Rev. 10876 G_Bacsojin will summon G_Spring_Rabbit now instead of Green Iguana. [L0ne_W0lf]
	* Fixed some of the episode 11.2 monsters not using the proper level for some of their skills. 
07/09
	* Rev. 10873 Commented out two questionable Marine Sphere skills. [L0ne_W0lf]
	* Rev. 10872 More mob_skill_db.txt updates. [L0ne_W0lf]
	- Added Fiber Lock to Argos and Close Confine to Drosera.
	- Fixed monsters in Thanatos Tower and past using "Bash" instead of "Provoke"
	- Added Two-hand Quicken to Incantation Samurai.
	- Several additional updates to other monster skills.
07/08
	* Rev. 10865 Corrected the new NPC skill IDs in the mob_skill_db. [L0ne_W0lf]
07/07
	* Rev. 10865 Commented out NPC_EARTHQUAKE in Randgris' skill list. [L0ne_W0lf]
	* Rev. 10864 Rather large update to mob_skill_db. [L0ne_W0lf]
	- Update to biolab monster skill list, and boss monster skill lists.
	- Updated 11.2 monster skills to official.
	- Monsters that summon mobs that are NOT mini-bosses only summon when IDLE now.
	- Due to lack of support for new NPC skills, they have been commented out.