@@ -3,6 +3,16 @@ Date	Added
 AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO INTO TRUNK.
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
+2007/07/24
+	* Fixes on Venom Splasher and the like (see topic:152975) [DracoRPG]
+	- VS / Envenom / Throw Venom Knife poison chance raised to 10+4*lv %
+	- Removed chance to be poisoned when hit if you're a VS time-bomb
+	- Adjusted bomb timer to correct values (5.5+0.5*lv sec)
+	- Removed damage boost from Poison React
+	- Now ignores EDP damage boost
+	- Prevented use on bosses
+	- Fixes still needed for recast restriction and splash damage
+	* Removed Emperium-damaging ability from Gloria Domini [DracoRPG]
 2007/07/23
 	* Changed the restricting mapflag for @jump from nowarp/nowarpto
 	  to noteleport. Adjust your scripts if you were using it this way.
