@@ -254,7 +254,7 @@
 //-- AS_VENOMDUST
 140,0,0,0,5000:10000:15000:20000:25000:30000:35000:40000:45000:50000,15000:20000:25000:30000:35000:40000:45000:50000:55000:60000
 //-- AS_SPLASHER
-141,1000,0,0,11000:10000:9000:8000:7000:6000:5000:4000:3000:2000,15000:20000:25000:30000:35000:40000:45000:50000:55000:60000
+141,1000,0,0,6000:6500:7000:7500:8000:8500:9000:9500:10000:10500,15000:20000:25000:30000:35000:40000:45000:50000:55000:60000
 
 //==========================================
 
